--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -30,6 +30,7 @@
   width: 100%;
   height: 100%;
   position: relative;
+  overflow: hidden;
 }
 
 .slide-wrapper {
@@ -42,12 +43,14 @@
   flex-direction: column; /* 세로 방향으로 슬라이드 나열 */
   transition: transform 1s ease;
   /* height는 JavaScript에서 동적으로 설정됨 */
+  will-change: transform;
 }
 
 .slide {
   width: 100%;
   height: 100%;
   flex-shrink: 0;
+  overflow: hidden;
 }
 
 .slide img {
